# voice-transcription

./: README.md  dataset.py  journal.md  pyproject.toml  utils.py
voice_transcription/: __init__.py
