[tool.poetry]
name = "voice-transcription"
version = "0.1.0"
description = ""
authors = ["Samuel Rae <samuelrae@Samuels-Air.fritz.box>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
