[tool.poetry]
name = "voice-transcription"
version = "0.1.0"
description = ""
authors = ["Samuel Rae <samuelrae@Samuels-Air.fritz.box>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.1"
numpy = "2.0.0"
datasets = "^3.2.0"
soundfile = "^0.12.1"
torchaudio = {version = "^2.5.1", extras = ["full"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
